--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.8.2",
     "@types/react": "18.2.24",
     "autoprefixer": "^10.4.16",
